--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,6 @@
+<link href="https://cdn.jsdelivr.net/npm/foundation-sites@6.5.0/dist/css/foundation.min.css" rel="stylesheet">
+
+<link href="https://cdn.jsdelivr.net/npm/ngx-foundation@1.0.6/dist/css/ngx-foundation.min.css" rel="stylesheet">
+
+
 <my-app>loading</my-app>
